--- a/style.css
+++ b/style.css
@@ -3,11 +3,15 @@
     padding: 0;
 }
 body{
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
+    font-family: 'Josefin Sans', sans-serif;
 }
 /*      intro section   */
-
+.intro{
+    color: white;
+    position: relative;
+}
 .hero_image_holder{
     height: 100%;
     width: 100%;
@@ -16,26 +20,28 @@ body{
     top: 0;
     display: grid;
     grid-template-columns: 3fr 1fr;
-    padding: 20px;
     position: absolute;
-    width: 89vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     z-index: 2;
 }
 .nav_icon{
     display: grid;
     justify-content: right;
+    padding: 25% 20% 0 0;
 }
 
 .main_txt{
     position: absolute;
     top: 30%;
     padding: 20px;
+    width: 90%;
+
 }
 .main_txt p{
     padding: 20px;
     border-style: solid;
-    font-size: 30px;
+    font-size: 10vw;
 }
 .nav_list{
     list-style: none;
@@ -52,6 +58,11 @@ body{
 }
 .nav_item a{
     text-decoration: none;
+    color: white;
+}
+.logo{
+    width: 80%;
+    padding: 10%;
 }
 
 /*      mid section     */
@@ -154,7 +165,7 @@ footer{
     width: 35px;
     height: 5px;
     background-color: #333;
-    margin: 6px 0;
+    margin: 3px 0;
     transition: 0.4s;
 }
 .change .bar1 {
@@ -169,7 +180,7 @@ footer{
     transform: rotate(45deg) translate(-8px, -8px);
   }
 
-  @media only screen and(min-width: 800px){
+  @media only screen and(min-width: 799px){
     .nav_icon{
         display: none;
     }
@@ -187,5 +198,20 @@ footer{
     .nav_item{
         padding: 0;
         text-align: center;
+    }
+    .main_txt{
+        width: 50%;
+    }
+    .main_txt p{
+        font-size: 5vw;
+    }
+}
+
+@media only screen and (min-height: 800px){
+    .main_txt{
+        width: 50%;
+    }
+    .main_txt p{
+        font-size: 5vw;
     }
 }
