--- a/style2.css
+++ b/style2.css
@@ -2,8 +2,12 @@
     padding: 0;
     margin: 0;
 }
+body{
+    font-family: 'Josefin Sans', sans-serif;
+}
 .intro{
     position: relative;
+    color: white;
 }
 .intro img{
     width: 100%;
@@ -11,12 +15,16 @@
 .nav{
     position: absolute;
     top: 0;
-    width: 100%;
+    width: 90%;
     display: grid;
     grid-template-columns: 3fr 1fr;
+    padding: 5%;
 }
 .logo{
     width: 200px;
+}
+.nav_section{
+    padding-top: 1%;
 }
 .nav_icon{
     display: none;
@@ -27,6 +35,7 @@
 }
 .nav_item a{
     text-decoration: none;
+    color: white;
 }
 .main_txt{
     position: absolute;
@@ -36,6 +45,9 @@
     padding: 20px;
     font-size: 4vw;
     width: 40vw;
+}
+.main_txt p{
+    
 }
 .mid{
     display: grid;
@@ -77,11 +89,15 @@
 }
 .creations_header{
     padding: 2vh 0 5vh 0;
+    font-size: 3vw;
 }
 .create_btn{
     position: absolute;
     top: 6vh;
     right: 0;
+}
+.main_btn{
+    font-size: 2vw;
 }
 .creation_post{
     columns: 4;
