--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
     grid-template-columns: 3fr 1fr;
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     z-index: 2;
 }
 .nav_icon{
@@ -213,5 +213,11 @@ footer{
     }
     .main_txt p{
         font-size: 5vw;
+    }
+}
+
+@media only screen and(orientation: landscape){
+    .nav{
+        height: auto;
     }
 }
